<resources>
    <string name="app_name">Pastoral Control</string>
    <string name="action_settings">Settings</string>

    <!-- Pastorais Form: -->
    <string name="pastorais_register">Pastorals Register</string>
    <string name="name_label">"Name: "</string>
    <string name="coordinator_label">"Coordinator: "</string>
    <string name="is_movement_label">Is it a movement?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="interest_activities">Interest Activities</string>
        <string name="visits">Houses visits</string>
    <string name="social_services">Social services</string>
    <string name="patron_saint">"Patron Saint: "</string>
        <string-array name="patron_saints">
            <item>Nenhum padroeiro selecionado</item>
            <item>São Sebastião</item>
            <item>São Cistovão</item>
            <item>São Bento</item>
            <item>Santa Terezinha</item>
            <item>Santa Clara</item>
            <item>Nossa Senhora de Guadalupe</item>
            <item>Nossa Senhora Aparecida</item>
            <item>Nossa Senhora das Graças</item>
            <item>Nossa Senhora do Perpétuo Socorro</item>
            <item>Mãe Rainha</item>
            <item>Espírito Santo</item>
            <item>Sagrado Coração de Jesus</item>
            <item>São Tarcisio</item>
            <item>São José</item>
            <item>Santa Bernadete</item>
            <item>Santa Luzía</item>
            <item>Outro</item>
        </string-array>
    <string name="submit_button">Send data</string>
    <string name="clear_all_data_button">Clear data</string>
    <string name="pastoral_list_page_title">Pastorals list</string>
    <string name="author_email_label">E-mail:</string>
    <string name="app_author_name">Aline Toneti Gonçalves</string>
    <string name="author_email">toneti.aline@gmail.com</string>
    <string name="utfpr_image_description">UTFPR - Campus Cornélio Procópio logo</string>
    <string name="about_app_authorship_button">About</string>
    <string name="get_back_button">Back</string>
    <string name="new_pastoral">New Pastoral</string>
    <string name="edited_pastoral">Edit Pastoral</string>
    <string name="cancel_edition">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="about_menu_item">About</string>

    <string name="you_selected">"You selected the pastoral: "</string>
    <string name="get_togethers">Get togthers</string>
    <string name="meetings">Meetings</string>
    <string name="liturgy">Liturgy</string>
    <string name="training">Training</string>
    <string name="spirituality_moments">Spirituality moments</string>
    <string name="others">Others</string>
    <string name="trips">Trips</string>
    <string name="fundraising_events">Fundraising events</string>
    <string name="app_authorship_page_title">App Authorship</string>
    <string name="app_author_name_label">Estudant\'s name:</string>
    <string name="author_course_label">Course</string>
    <string name="author_course">Specialization Course in Java Technology</string>
    <string name="app_description_label">App description</string>
    <string name="new_pastoral_button">New</string>
    <string name="add_menu_item">Add</string>
    <string name="all_fields_are_cleaned">All the fields are cleared!</string>
    <string name="fill_all_fields">Fill in all fields!</string>
    <string name="data_sent_success">Data sent with success!</string>
    <string name="app_description">The main objective of the pastoral control system is to help people who participate in several pastorals in the church and have some difficulty in managing the events that each one provides.</string>
    <string name="confirm_deletion_message">Do you really want to delete the pastoral</string>
    <string name="warning">Warning!</string>
    <string name="ok">Ok</string>
    <string name="confirmation">Confirmation</string>
</resources>